force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/bizible2__Bizible_Attribution_Touchpoint__c.object-meta.xml
<CustomObject>
    <label>Bizible Attribution Touchpoint</label>
    <nameField>
        <label>Attribution Touchpoint</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bizible Attribution Touchpoint</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>