force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Ad_Content__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Ad_Content__c</fullName>
    <description>The title, copy, and display URL from the ad</description>
    <inlineHelpText>The title, copy, and display URL from the ad</inlineHelpText>
    <label>Ad Content</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>