force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Ad_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Ad_Group_Id__c</fullName>
    <label>Ad Group Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>