force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Attribution_Custom_Model_2__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Attribution_Custom_Model_2__c</fullName>
    <description>The percentage distributed for this touchpoint based on your custom attribution model</description>
    <inlineHelpText>The percentage distributed for this touchpoint based on your custom attribution model</inlineHelpText>
    <label>Attribution % Custom Model</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>