force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Attribution_Custom_Model__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Attribution_Custom_Model__c</fullName>
    <description>The percentage distributed for this touchpoint based on a full path attribution model</description>
    <inlineHelpText>The percentage distributed for this touchpoint based on a custom shaped attribution model</inlineHelpText>
    <label>Attribution % Full Path</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>