force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Attribution_First_Touch__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Attribution_First_Touch__c</fullName>
    <description>The percentage distributed for this touchpoint based on the first touch point</description>
    <inlineHelpText>The percentage distributed for this touchpoint based on the first touch point</inlineHelpText>
    <label>Attribution % First Touch</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>