force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Attribution_U_Shaped__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Attribution_U_Shaped__c</fullName>
    <description>The percentage distributed for this touchpoint based on a U-Shaped attribution model</description>
    <inlineHelpText>The percentage distributed for this touchpoint based on a U-Shaped attribution model</inlineHelpText>
    <label>Attribution % U-Shaped</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>