force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Browser__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Browser__c</fullName>
    <description>The browser that the user is on while engaged in the activity</description>
    <inlineHelpText>The browser that the user is on while engaged in the activity</inlineHelpText>
    <label>Browser</label>
    <length>60</length>
    <type>Text</type>
</CustomField>