force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Count_Custom_Model_2__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Count_Custom_Model_2__c</fullName>
    <description>The count distributed for this touchpoint based on your custom attribution model</description>
    <inlineHelpText>The count distributed for this touchpoint based on your custom attribution model</inlineHelpText>
    <label>Count - Custom Model</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>