force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Count_W_Shaped__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Count_W_Shaped__c</fullName>
    <description>The count distributed for this touchpoint based on a W-Shaped model</description>
    <inlineHelpText>The count distributed for this touchpoint based on a W-Shaped model</inlineHelpText>
    <label>Count - W-Shaped</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>