force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Form_URL__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Form_URL__c</fullName>
    <description>The URL of the page where the form submission occurred</description>
    <inlineHelpText>The URL of the page where the form submission occurred</inlineHelpText>
    <label>Form URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>