force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Landing_Page__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Landing_Page__c</fullName>
    <label>Landing Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>