force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Bizible Attribution Touchpoint</relationshipLabel>
    <relationshipName>Bizible_Attribution_Touchpoint</relationshipName>
    <type>Lookup</type>
</CustomField>