force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Platform__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Platform__c</fullName>
    <description>The operating system that the user is on while engaged in the activity</description>
    <inlineHelpText>The operating system that the user is on while engaged in the activity</inlineHelpText>
    <label>Platform</label>
    <length>60</length>
    <type>Text</type>
</CustomField>