force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Referrer_Page_Raw__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Referrer_Page_Raw__c</fullName>
    <description>The URL of the referring website</description>
    <inlineHelpText>The URL of the referring website</inlineHelpText>
    <label>Referrer Page - Raw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>