force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Revenue_Custom_Model__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Revenue_Custom_Model__c</fullName>
    <description>The amount distributed for this touchpoint based on a full path attribution model</description>
    <formula>if($Setup.bizible2__bizibleSettings__c.bizible2__Use_Custom_Amount_Field__c, 
bizible2__Opportunity__r.bizible2__Bizible_Opportunity_Amount__c *  bizible2__Attribution_Custom_Model__c, 
bizible2__Opportunity__r.Amount * bizible2__Attribution_Custom_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount distributed for this touchpoint based on a custom shaped attribution model</inlineHelpText>
    <label>Revenue - Full Path</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>