force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Segment__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Segment__c</fullName>
    <description>Custom values that are tagged on the touchpoint for reporting</description>
    <inlineHelpText>Custom values that are tagged on the touchpoint for reporting</inlineHelpText>
    <label>Segment</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>