force-app/main/default/objects/bizible2__Bizible_Attribution_Touchpoint__c/fields/bizible2__Site_Name__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Site_Name__c</fullName>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>